feat: share canonical word parser across BPM and MES